infra/dev-k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.auctionservice.com
        - api.auctionservice.com
      secretName: auctionservice-app-tls
  rules:
    - host: app.auctionservice.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: clientapp-clusterip
                port:
                  number: 3000
    - host: api.auctionservice.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
